--- a/package.json
+++ b/package.json
@@ -11,19 +11,26 @@
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "flatrepo": "^1.0.6",
     "next": "15.1.3",
+    "next-auth": "^5.0.0-beta.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^5.4.0",
     "swiper": "^11.1.15",
+    "zod": "^3.22.4",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.0.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
